<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Strings -->
    <string name="app_name">Bus Phone</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out_label">Sign Out</string>

    <!-- Sign In Screen -->
    <string name="login_username_label">User</string>
    <string name="login_password_label">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>

    <!-- Sign Up Screen -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="new_username_label">User</string>
    <string name="new_password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="new_realname_label">Full Name</string>
    <string name="new_credit_card_info_label">Credit Card Info</string>
    <string name="new_credit_card_type_label">Type</string>
    <string name="new_credit_card_number_label">Number</string>
    <string name="new_credit_card_validity_label">Validity</string>
    <string name="create_account_label">Create Account</string>

    <string-array name="credit_card_types">
        <item>Insert your card type…</item>
        <item>VISA</item>
        <item>MasterCard</item>
        <item>American Express</item>
        <item>Maestro</item>
    </string-array>

    <!-- Main Screen -->
    <string name="title_activity_main">Bus Phone</string>
    <string name="see_tickets_option">My Tickets</string>
    <string name="title_activity_show_tickets">My Tickets</string>

    <!-- New Ticket Specific Strings -->
    <string name="title_dialog_new_ticket">New Ticket</string>
    <string name="buy_ticket_label">Buy ticket</string>
    <string name="cancel_buy_ticket_label">Cancel</string>

    <string-array name="number_of_tickets_to_buy">
        <item>Please select the number of tickets to buy…</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="ticket_types">
        <item>Please select your ticket type…</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>

    <string name="Buy_Tickets_Button">Buy Tickts</string>

    <!-- Single Ticket Screen -->
    <string name="title_dialog_single_ticket">Show Ticket</string>
    <string name="validate_ticket_button_label">Validate Ticket</string>
    <string name="go_back_ticket_label">Back</string>

    <!-- Show list of tickets Screen (Alternative activity) -->
    <string name="title_show_list_activity">Here are all your unused tickets</string>
    <string name="validate_ticket_Button_text">Validate ticket</string>
    <string name="show_ticket_Button_text">Show details</string>
    <string name="buy_more_tickets_button_text">Buy more tickets</string>
    
	<!-- Show ticket details screen (Alternative activity) -->
	<string name="details_validate_button">Validate Ticket</string>
	<string name="details_back_button">Go back</string>
    
    <!-- Validation Screen -->
    <string name="title_activity_validation">Ticket Validation</string>
    <string name="validate_message_label">Please validate your ticket.</string>
    <string name="title_activity_buy_ticktes">BuyTicktesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_list_of_tickets">ShowListOfTicketsActivity</string>
    <string name="title_activity_show_ticket_detais">ShowTicketDetaisActivity</string>

</resources>
