<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowListOfTicketsActivity" >

    <TextView
        android:id="@+id/textLabel_show_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_show_list_of_tickets" />

    <Spinner
        android:id="@+id/spinner_list_of_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/show_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_ticket_Button_text" />

    <Button
        android:id="@+id/validateTicketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_ticket_Button_text" />

</LinearLayout>
