<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <TableLayout
        android:layout_width="match_parent"
   	    android:layout_height="wrap_content">
        
        <TableRow
            android:id="@+id/usernameRow"
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content" >

        	<EditText
            	android:id="@+id/loginUsernameEditText"
            	android:layout_width="match_parent"
            	android:layout_height="60dip"
            	android:layout_weight="1"
            	android:inputType="text"
            	android:hint="@string/login_username_label" >

        		<requestFocus />
    		</EditText>
            
        </TableRow>
        <TableRow 
            android:id="@+id/passwordRow"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content" >
   	    
            <EditText
            	android:id="@+id/loginPasswordEditText"
            	android:layout_width="match_parent"
            	android:layout_height="60dip"
            	android:layout_weight="1"
            	android:inputType="textPassword"
            	android:hint="@string/login_password_label">
            	
    		</EditText>
        </TableRow>
        
    </TableLayout>
    
    <Button
        android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/sign_in_button_text"
   	    android:onClick="signInAction">
        
    </Button>
    
    <Button
        android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/sign_up_button_text"
   	    android:onClick="signUpAction">
    </Button>

</LinearLayout>
