<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/newUsernameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/newUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="text" 
                    android:hint="@string/new_username_label">
 
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/newPasswordRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/newPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="textPassword" 
                    android:hint="@string/new_password_label">

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/confirmPasswordRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="textPassword" 
                    android:hint="@string/confirm_password_label">

                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/newRealnameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
   
                <EditText
                    android:id="@+id/newRealnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="text" 
                    android:hint="@string/new_realname_label">

                </EditText>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/newCreditCardLabel"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/new_credit_card_info_label" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TableRow
                android:id="@+id/newCreditCardTypeRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <Spinner 
                    android:id="@+id/newCreditCardTypeSpinner"
                    android:layout_width="fill_parent"
   			 		android:layout_height="wrap_content"
   			 		android:layout_weight="1"
   			 		android:entries="@array/credit_card_types"/>
                
            </TableRow>

            <TableRow
                android:id="@+id/newCreditCardNumberRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
               
                <EditText
                    android:id="@+id/newCreditCardNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/new_credit_card_number_label" />
                
            </TableRow>

            <TableRow
                android:id="@+id/newCreditCardValidityRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <!-- Tutorial here: http://www.codinguser.com/2012/06/time-and-date-inputs-in-android/ -->
                <EditText 
                    android:id="@+id/newCreditCardValidityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:hint="@string/new_credit_card_validity_label"/>
                
                
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="createAccountAction"
            android:text="@string/create_account_label" />
    </LinearLayout>

</ScrollView>